--- a/film/bac-nord.html
+++ b/film/bac-nord.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/BAC-Nord/BAC-Nord-slider.jpg>
-          <source src="https://kes002m6dp2g.tnmr.org/hls2/04/00433/vydrsr9pjid2_h/master.m3u8?t=xncS0Y0SDcDZk9WmqlYqZpHUDz8sicJ6o82doyIxXfw&s=1729963828&e=43200&f=2166469&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/bac-nord/refs/heads/main/bac-nord.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
