--- a/film/beetlejuice-beetlejuice.html
+++ b/film/beetlejuice-beetlejuice.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Beetlejuice-Beetlejuice/Beetlejuice-Beetlejuice-slider.webp>
-          <source src="https://i2gcnsz23x2n.tnmr.org/hls2/01/00542/x8vm5utucs1d_h/master.m3u8?t=ZTwexhYbWSvLKw1njdVdgvAIhrGHD6nPr4bunwa8c1M&s=1729961085&e=43200&f=2712862&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/Beetlejuice-Beetlejuice/refs/heads/main/beetlejuicie.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
