--- a/film/les-tuche-4.html
+++ b/film/les-tuche-4.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Les-Tuche-4/Les-Tuche-4-slider.jpg>
-          <source src="https://h5m4wcqov02r.tnmr.org/hls2/02/00448/f8s9xsdr5juh_h/master.m3u8?t=-yMH1TcnewGS80iSAUoN6zQnmNaxWSo_qlxtwvT9Af4&s=1729963958&e=43200&f=2242389&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/les-tuche-4/refs/heads/main/les-tuche-4.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
