--- a/film/twisters.html
+++ b/film/twisters.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Twisters/Twisters-slider.jpg>
-          <source src="https://3aabuhlcw7wb.tnmr.org/hls2/02/00412/mzkcwx3nvl2h_h/master.m3u8?t=2ZzrqbfrzFgPVsfJFlUwIewEFJizXywoz96iEWfJy6Q&s=1729960604&e=43200&f=2064470&srv=h5m4wcqov02r&i=0.3&sp=0&p1=3aabuhlcw7wb&p2=3aabuhlcw7wb" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/twisters/refs/heads/main/twisters.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
