--- a/film/vice-versa-2.html
+++ b/film/vice-versa-2.html
@@ -76,7 +76,7 @@
                 </ul>
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
-                    <li><a href="https://xalaflix.eu" class="" title="home">Home</a></li>
+                    <li><a href="" class="" title="home">Home</a></li>
                     <li><a href="#" class="Active" title="Films">Films</a></li>
                     <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
@@ -151,7 +151,7 @@
 
 <!-- Player -->
 <video id="player" playsinline controls preload="metadata" poster="../img/film/vice-versa-2/vice-versa-2-slider.jpg">
-  <source id="video-source" src="https://3aabuhlcw7wb.tnmr.org/hls2/03/00446/bde0wgrtdx2d_h/master.m3u8?t=3W-bOglqV6rEbgTvM-o_eUt8pqHV5e1Z6SXJYHQEJCk&s=1729959686&e=43200&f=2231224&srv=n2o3lct4gpv9&i=0.3&sp=0&p1=3aabuhlcw7wb&p2=3aabuhlcw7wb" type="application/x-mpegURL">
+  <source id="video-source" src="https://raw.githubusercontent.com/Crimson-streaming/vice-versa-2/refs/heads/main/vice-versa-2.m3u8" type="application/x-mpegURL">
   Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
 </video>
 
