--- a/film/alibi.com-2.html
+++ b/film/alibi.com-2.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Alibi.com-2/Alibi.com-2-slider.jpg>
-          <source src="https://21vqxct7g8bi.tnmr.org/hls2/04/00477/oxepyhzfpcij_h/master.m3u8?t=x368_ADt2i2G_SO2homPD56jUTMMAIhHUHhOkW-_QWw&s=1729963690&e=43200&f=2388873&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/alibi.com-2/refs/heads/main/alibi.com.-2.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
