--- a/film/maison-de-retraite-2.html
+++ b/film/maison-de-retraite-2.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Maison-de-retraite-2/Maison-de-retraite-2-slider.jpg>
-          <source src="https://vy55q9198is2.tnmr.org/hls2/03/00406/kj2hldy5qach_h/master.m3u8?t=QoOIxgZq88k4YffCk9UwsMVsRG-LuY_54HSnj5wiBiM&s=1729963534&e=43200&f=2033314&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/maison-de-retraite-2/refs/heads/main/maison-de-retraite-2.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
