--- a/film/moi-moche-et-méchant-4.html
+++ b/film/moi-moche-et-méchant-4.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster="../img/film/moi-moche-et-mechant-4/Moi-moche-et-méchant-4-slider.jpg">
-          <source src="https://cdn1024.tnmr.org/hls2/01/00593/3jh41mdvv31j_h/master.m3u8?t=7rHYO9mdzWao0jdsop-nAb7Eu6fhwzYPs3ET_uBevLw&s=1729961349&e=43200&f=2966516&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/moi-moche-et-m-chant-4/refs/heads/main/moi-moche.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
