--- a/film/nowhere.html
+++ b/film/nowhere.html
@@ -75,7 +75,7 @@
                 </ul>
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
-                    <li><a href="https://xalaflix.eu" class="" title="home">Home</a></li>
+                    <li><a href="" class="" title="home">Home</a></li>
                     <li><a href="#" class="Active" title="Films">Films</a></li>
                     <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
@@ -108,7 +108,7 @@
           <div class="row mt-30">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="video-posts-data mt-0 mb-0">
-                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(https://xalaflix.eu/upload/images/bmFSbK6HMDz5moHjIkf3BatBdca.jpg); background-repeat: no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; min-height: 330px; max-width: 1600px; border-radius: 14px;">
+                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/Nowhere/Nowhere-slider.jpg); background-repeat: no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; min-height: 330px; max-width: 1600px; border-radius: 14px;">
                   <div class="play-icon-item" id="regarder"></div>
                   <div class="d-flex dtl-title-block mb-2">  
                     <h1 class="mb-0" style="font-weight: bold;">Nowhere</h1>
@@ -148,7 +148,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <!-- Player -->
-        <video id="player" playsinline controls preload="metadata" poster="https://xalaflix.eu/upload/images/bmFSbK6HMDz5moHjIkf3BatBdca.jpg">
+        <video id="player" playsinline controls preload="metadata" poster="../img/film/Nowhere/Nowhere-slider.jpg">
           <source id="video-source" src="https://mayi22140.mayicloud.com/files/aa/bU4cGZhssurEmByhmkSHnXVytre4pqbAkgM.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
 
