--- a/film/spider-man-no-way-home.html
+++ b/film/spider-man-no-way-home.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Spider-Man-No-Way-Home/Spider-Man-No-Way-Home-slider.jpg>
-          <source src="https://21vqxct7g8bi.tnmr.org/hls2/02/00451/sg7d0v0m443c_h/master.m3u8?t=dZZtcPZcJDLZ1UshhIWLxwCJ41gCw9S88mHinDcs_jA&s=1729962721&e=43200&f=2259886&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/spider-man-no-way-home/refs/heads/main/spider-man-no-way-home.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
