--- a/film/top-gun-maverick.html
+++ b/film/top-gun-maverick.html
@@ -141,7 +141,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Top-Gun-Maverick/Top-Gun-Maverick-slider.jpg>
-          <source src="https://cdn1030.tnmr.org/hls2/01/00451/jo8j65ja1hp9_h/master.m3u8?t=V4YvX1-phPMBC533kScWevmE2iSIhSeWwEcsQCT4jxc&s=1729962394&e=43200&f=2255356&i=0.3&sp=0" type="application/x-mpegURL">
+          <source src="https://raw.githubusercontent.com/Crimson-streaming/top-gun/refs/heads/main/top-gun.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
