--- a/film/furiosa-une-saga-mad-max.html
+++ b/film/furiosa-une-saga-mad-max.html
@@ -132,6 +132,7 @@
               </nav>
               <section class="tabs_item_block">
                 <div class="tab1">
+                  <p><strong id="warning-video-cam-sd">[⚠️ Ce film n'est pas disponible sur iOS en raison des règles d'Apple. Nous travaillons activement pour résoudre ce problème.⚠]</strong></p>
                   <p>Alors que le monde s'écroule, la jeune Furiosa tombe entre les mains d'une horde de motards dirigée par le seigneur de la guerre Dementus. En traversant le Wasteland, ils tombent sur la Citadelle présidée par l'Immortan Joe. Alors que les deux tyrans se battent pour la domination, Furiosa doit survivre à de nombreuses épreuves pour trouver le moyen de rentrer chez elle.</p>
                 </div>
               </section>
