--- a/direct.html
+++ b/direct.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
                     <div class="single-video">
-                        <a href="direct/Xilam.html" title="xilam"></a>
+                        <a href="direct/xilam.html" title="xilam"></a>
                             <div class="video-img">          
                                 <img src="img/direct/Xilam.png" title="Xilam" alt="Xilam">         
                             </div>
