--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<div class="splide-slider-details-area" style="margin-bottom: -15px;">
 									<h1></h1>
 									<a href="film/moi-moche-et-méchant-4.html" class="btn-watch" title=""><img src="img/assets/ic-play.webp" alt="ic-play" title="ic-play">Regarder</a>
-								</div> <img src="img/film/moi-moche-et-mechant-4/Moi-moche-et-méchant-4-slider.jpg" title="" alt=""> </a>
+								</div> <img src="img/film/moi-moche-et-mechant-4/moi-moche-et-méchant-4-slider-owl.jpg" title="" alt=""> </a>
 						</li>
 						<li class="splide__slide">
 							<a href="film/sous-la-seine.html" title="">
