--- a/film/vice-versa-2.html
+++ b/film/vice-versa-2.html
@@ -171,83 +171,77 @@
 
 
 
-<!-- Combined FWDEVPlayer and Plyr Script -->
 <script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', () => {
-        const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute','pip','settings',  'fullscreen',];
+  document.addEventListener('DOMContentLoaded', () => {
+      const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'pip', 'settings', 'fullscreen'];
+      const player = new Plyr('#player', {
+          controls: playerControls,
+          quality: {
+              default: 720,
+              options: [720]
+          },
+          playsinline: true,
+          keyboard: { focused: true, global: true },
+          fullscreen: { enabled: true, fallback: true, iosNative: true },
+          disableContextMenu: true,
+          i18n: {
+              play: 'Play',
+              pause: 'Pause',
+              mute: 'Silence',
+              unmute: 'Son activé',
+              enableCaptions: 'Activer les sous-titres',
+              disableCaptions: 'Désactiver les sous-titres',
+              enterFullscreen: 'Plein écran',
+              exitFullscreen: 'Sortir du plein écran',
+              settings: 'Réglages',
+              speed: 'Vitesse',
+              quality: 'Qualité',
+              loop: 'Boucle',
+              disabled: 'Désactivé',
+              enabled: 'Activé',
+              captions: 'Sous-titres',
+          },
+      });
 
-        const player = new Plyr('#player', {
-            controls: playerControls,
-            quality: {
-                default: 720,
-                options: [720]
-            },
-            playsinline: true,
-            keyboard: { focused: true, global: true },
-            fullscreen: { enabled: true, fallback: true, iosNative: true },
-            disableContextMenu: true,
-            i18n: {
-                play: 'Play',
-                pause: 'Pause',
-                mute: 'Silence',
-                unmute: 'Son activé',
-                enableCaptions: 'Activer les sous-titres',
-                disableCaptions: 'Désactiver les sous-titres',
-                enterFullscreen: 'Plein écran',
-                exitFullscreen: 'Sortir du plein écran',
-                settings: 'Réglages',
-                speed: 'Vitesse',
-                quality: 'Qualité',
-                loop: 'Boucle',
-                disabled: 'Désactivé',
-                enabled: 'Activé',
-                captions: 'Sous-titres',
-            },
-        });
+      const videoElement = document.getElementById('player');
+      const hlsSource = videoElement.querySelector('source').src;
 
-         const videoElement = document.getElementById('player');
-const hlsSource = videoElement.querySelector('source').src;
+      // Utiliser l'URL comme clé unique pour la vidéo
+      const storageKey = `videoCurrentTime_${encodeURIComponent(hlsSource)}`;
 
-if (Hls.isSupported()) {
-    const hls = new Hls();
-    hls.loadSource(hlsSource);
-    hls.attachMedia(videoElement);
+      // Charger le temps de lecture
+      const loadVideoTime = () => {
+          const savedTime = localStorage.getItem(storageKey);
+          if (savedTime) {
+              videoElement.currentTime = parseFloat(savedTime);
+          }
+      };
 
-    // Reload video when it ends
-    videoElement.addEventListener('ended', () => {
-        hls.loadSource(hlsSource);
-        videoElement.play();  // Replay video
-    });
+      if (Hls.isSupported()) {
+          const hls = new Hls();
+          hls.loadSource(hlsSource);
+          hls.attachMedia(videoElement);
 
-    // Handle HLS errors
-    hls.on(Hls.Events.ERROR, (event, data) => {
-        if (data.fatal) {
-            switch (data.type) {
-                case Hls.ErrorTypes.NETWORK_ERROR:
-                    console.log("Erreur réseau, tentative de récupération...");
-                    hls.startLoad();
-                    break;
-                case Hls.ErrorTypes.MEDIA_ERROR:
-                    console.log("Erreur média, tentative de récupération...");
-                    hls.recoverMediaError();
-                    break;
-                default:
-                    console.log("Erreur fatale, rechargement...");
-                    hls.destroy();
-                    hls.loadSource(hlsSource);
-                    hls.attachMedia(videoElement);
-                    break;
-            }
-        }
-    });
-} else if (videoElement.canPlayType('application/vnd.apple.mpegurl')) {
-    // Fallback for native HLS support (Safari)
-    videoElement.src = hlsSource;
-    videoElement.addEventListener('ended', () => {
-        videoElement.play(); // Replay video
-    });
-}
-});
+          videoElement.addEventListener('ended', () => {
+              hls.loadSource(hlsSource);
+              videoElement.play(); // Replay video
+          });
+
+          // Sauvegarder le temps de lecture
+          videoElement.addEventListener('timeupdate', () => {
+              localStorage.setItem(storageKey, videoElement.currentTime);
+          });
+
+          loadVideoTime(); // Charger le temps de lecture à la fin de la configuration
+      } else if (videoElement.canPlayType('application/vnd.apple.mpegurl')) {
+          // Fallback for native HLS support (Safari)
+          videoElement.src = hlsSource;
+          videoElement.addEventListener('ended', () => {
+              videoElement.play(); // Replay video
+          });
+          loadVideoTime(); // Charger le temps de lecture à la fin de la configuration
+      }
+  });
 </script>
 
 
