--- a/time.html
+++ b/time.html
@@ -5,9 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Crimson">
-  <title>Crimson | Regarder Maison de retraite 2 en streaming</title>
-  <meta name="description" content="Crimson | Regarder Maison de retraite 2 en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
-  <link rel="canonical" href="maison-de-retraite-2.html">
+  <title>Crimson | Regarder 3 jours max en streaming</title>
+  <meta name="description" content="Crimson | Regarder 3 jours max en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
+  <link rel="canonical" href="3-jours-max.html">
      <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
@@ -35,8 +35,6 @@
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
  
-   <!-- SW -->
-   <script src="https://storage.googleapis.com/workbox-cdn/releases/6.5.3/workbox-sw.js"></script>
 
     <!-- Player -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
@@ -107,18 +105,18 @@
           <div class="row mt-30">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="video-posts-data mt-0 mb-0">
-                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/Maison-de-retraite-2/Maison-de-retraite-2-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
+                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/3-jours-max/3-jours-max-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
                   <div class="d-flex dtl-title-block mb-2">  
-                    <h1 class="mb-0" style="font-weight: bold;">Maison de retraite 2</h1>
+                    <h1 class="mb-0" style="font-weight: bold;">3 jours max</h1>
                   </div>
                   <ul class="actor-video-link">
                     <li><a title="Comédie">Comédie</a></li> <li><a title="Français">Français</a></li>
                   </ul>
                   <div class="video-post-date">
-                    <span class="video-posts-author"><i class="fa fa-eye"></i>24.7K Vues</span>
-                    <span class="video-posts-author"><i class="fa fa-calendar-alt"></i>14/02/2024</span>
-                    <span class="video-posts-author"><i class="fa fa-clock"></i>1h 42m</span>
-                    <span class="video-imdb-view">5.9/10 ⭐</span>
+                    <span class="video-posts-author"><i class="fa fa-eye"></i>22.1K Vues</span>
+                    <span class="video-posts-author"><i class="fa fa-calendar-alt"></i>25/10/2023</span>
+                    <span class="video-posts-author"><i class="fa fa-clock"></i>1h 28m</span>
+                    <span class="video-imdb-view">5.3/10 ⭐</span>
                   </div>
                 </div>
               </div>
@@ -132,7 +130,7 @@
               </nav>
               <section class="tabs_item_block">
                 <div class="tab1">
-                  <p>Quand le foyer Lino Vartan - qui accueille jeunes orphelins et seniors - doit fermer pour raisons sanitaires, Milann n’a pas d’autre choix que de répondre à l’invitation d’une maison de retraite dans le Sud qui les accueille pour l’été. Tous embarquent dans le bus d’Alban. Enfants et anciens découvrent alors le Bel Azur Club, une villa idyllique au bord de la mer : le rêve ! Une aubaine pour ces gamins orphelins qui n’ont jamais eu de vacances... Mais le paradis tourne à l’enfer car anciens et nouveaux pensionnaires du 3e âge se détestent ! La guerre des seniors est déclarée !</p>
+                  <p>Après avoir prouvé à tous qu'il est un policier hors pair, Rayan s'inscrit au concours d'agent secret. Il se donne à fond dans les épreuves mais le couperet tombe : il est recalé. Rayan n'a pas le temps de pleurer sur son sort, sa grand-mère et Lynda sont enlevées par d'anciens associés du rat.</p>
                 </div>
               </section>
             </div>
@@ -140,10 +138,10 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Maison-de-retraite-2/Maison-de-retraite-2-slider.jpg>
-          <source src="https://raw.githubusercontent.com/Crimson-streaming/maison-de-retraite-2/refs/heads/main/maison-de-retraite-2.m3u8" type="application/x-mpegURL">
-          Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
-        </video>
+        <video id="player" playsinline controls preload="metadata" poster=../img/film/3-jours-max/3-jours-max-slider.jpg>
+            <source src="https://mayi24312.mayicloud.com/files/aa/sK0yfC2yDkCOuOmVbd82wlihhAmvg6tIQth.m3u8" type="application/x-mpegURL">
+            Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
+          </video>
        <!-- JS Imports -->
        <script src="../js/sw.js"></script>
        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -156,7 +154,7 @@
        <script src="../js/custom-main.js"></script>
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-        <script type="text/javascript">
+       <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', () => {
             const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'pip', 'settings', 'fullscreen'];
             const player = new Plyr('#player', {
@@ -228,8 +226,7 @@
             }
         });
     </script>
-    
-      </div>
+</div>
     </div>
   </div>
 </div>
@@ -283,6 +280,6 @@ $(document).ready(function() {
         return false;
     });
 });
-</script><script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+</script>
 </body>
 </html>
