--- a/film/Deadpool-et-Wolverine.html
+++ b/film/Deadpool-et-Wolverine.html
@@ -315,6 +315,7 @@ async function showSuggestions(query) {
     });</script>
 
  <!-- disable devtool -->
+</script><script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
  
 </body>
 </html>
