--- a/film/furiosa-une-saga-mad-max.html
+++ b/film/furiosa-une-saga-mad-max.html
@@ -142,7 +142,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/Furiosa-Une-saga-Mad-Max/Furiosa-Une-saga-Mad-Max-slider.jpg>
-          <source src="https://3aabuhlcw7wb.tnmr.org/hls2/03/00446/bde0wgrtdx2d_h/master.m3u8?t=3W-bOglqV6rEbgTvM-o_eUt8pqHV5e1Z6SXJYHQEJCk&s=1729959686&e=43200&f=2231224&srv=n2o3lct4gpv9&i=0.3&sp=0&p1=3aabuhlcw7wb&p2=3aabuhlcw7wb" type="application/x-mpegURL">
+          <source src="https://share22147.sharecloudy.com/files/aa/O567SioCld3aHHr3gXrBjWLfdfdggfdd.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
