--- a/direct/xilam.html
+++ b/direct/xilam.html
@@ -281,6 +281,6 @@ async function showSuggestions(query) {
         return false;
     });
 </script>
-<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>  
+ <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>  
 </body>
 </html>
