--- a/film/Deadpool-et-Wolverine.html
+++ b/film/Deadpool-et-Wolverine.html
@@ -156,6 +156,7 @@
        
        <!-- JS Imports -->
    <script src="../js/sw.js"></script>
+   <script src="js/save.js"></script>
    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> <!-- HLS.js for HLS support -->
@@ -315,6 +316,7 @@ async function showSuggestions(query) {
     });</script>
 
  <!-- disable devtool -->
+</script> <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
  
 </body>
 </html>
