--- a/film/athena.html
+++ b/film/athena.html
@@ -284,6 +284,6 @@ $(document).ready(function() {
     });
 });
 </script>
-<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+ <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
 </body>
 </html>
