--- a/direct.html
+++ b/direct.html
@@ -274,7 +274,7 @@
    <script src="js/jquery.nice-select.min.js"></script>  
    <script src="js/megamenu.js"></script> 
    <script src="js/custom-main.js"></script>
-   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <script>
