--- a/direct/Arte.html
+++ b/direct/Arte.html
@@ -278,6 +278,6 @@
             return false;
         });
     </script>
-   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
 </body>
 </html>
