--- a/direct/test.html
+++ b/direct/test.html
@@ -139,7 +139,7 @@
           </div>
         </div>
       </div>
-      <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+      <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="metadata" poster=../img/film/30-jours-max/30-jours-max-slider.jpg>
           <source src="https://hippopotame.site/The.Platform.2.2024.mp4?stream" type="video/mp4">
@@ -283,6 +283,6 @@ $(document).ready(function() {
         return false;
     });
 });
-</script><script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+</script> <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
 </body>
 </html>
