--- a/film/american-nightmare-5-sans-limites.html
+++ b/film/american-nightmare-5-sans-limites.html
@@ -284,6 +284,6 @@ $(document).ready(function() {
         return false;
     });
 });
-</script><script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+</script> <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
 </body>
 </html>
