--- a/film/back-to-black.html
+++ b/film/back-to-black.html
@@ -140,7 +140,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Back-to-Black/Back-to-Black-slider.jpg>
+        <video id="player" playsinline controls preload="metadata" poster="../img/film/Back-to-Black/Back-to-Black-slider.jpg">
           <source src="https://mayi24312.mayicloud.com/files/aa/h2apbo9Dx8d3qxSM9jTk79zYaxZ0WGYdI8C.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
@@ -283,6 +283,6 @@ $(document).ready(function() {
         return false;
     });
 });
-</script><script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+</script> <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
 </body>
 </html>
