--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 	<link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/search.css">
-	
 
      <!-- SW -->
     <script src="https://storage.googleapis.com/workbox-cdn/releases/6.5.3/workbox-sw.js"></script>
@@ -519,7 +518,7 @@ async function showSuggestions(query) {
 <script src="js/splide.min.js"></script>
 <script src="js/custom-main.js"></script>
 <script src="js/jquery-eu-cookie-law-popup.js"></script>
-<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <script>
 	// Fonction exécutée lors de l'utilisation du clic droit.
@@ -528,6 +527,8 @@ async function showSuggestions(query) {
 		return false;
 	});
 </script>
+
+
 
 </body>
 </html>
