--- a/404.html
+++ b/404.html
@@ -5,16 +5,12 @@
     <meta name="theme-color" content="#b81b0e">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="XalaFlix">
+    <meta name="author" content="Crimson">
     <title>Crimson - LE site de streaming</title>
     <meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" href="img/favicon/favicon.png">
 
     <!-- Manifest -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,7 +32,7 @@
     <link rel="stylesheet" href="css/search.css">
 
     <!-- SweetAlert2 -->
-    <script src="https://xalaflix.eu/site_assets/js/sweetalert2@11.js"></script>
+	<script src="js/sweetalert2@11.js"></script>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
