--- a/film/insidious-the-red-door.html
+++ b/film/insidious-the-red-door.html
@@ -8,12 +8,8 @@
   <title>Crimson | Regarder Insidious The Red Door en streaming</title>
   <meta name="description" content="Crimson | Regarder Insidious The Red Door en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="insidious-the-red-door.html">
-     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="../img/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="../img/favicon/android-chrome-512x512.png">
+<!-- Favicon -->
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
    
 
      <!-- manifest -->
