--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
 	<meta name="theme-color" content="#b81b0e">
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="XalaFlix">
+	<meta name="author" content="Crimson">
 	<title>Crimson - LE site de streaming</title>
 	<meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
-	
+	<meta property="og:title" content="Crimson - LE site de streaming" />
+    <meta property="og:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
+    <meta property="og:image" content="img/logo.png" />
+    <meta property="og:url" content="https://crimson-streaming.github.io/crimson/" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="img/logo.png">
+    <link rel="image_src" href="img/logo.png">
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico">
-	<link rel="icon" type="image/png" sizes="192x192" href="img/faviconfavicon/android-chrome-192x192.png">
-	<link rel="icon" type="image/png" sizes="512x512" href="img//favicon/android-chrome-512x512.png">
-
-     <!-- manifest -->
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	
+	<!-- manifest -->
      <meta name="apple-mobile-web-app-capable" content="yes">
      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
      <meta name="apple-mobile-web-app-title" content="Crimson">
