--- a/direct.html
+++ b/direct.html
@@ -10,11 +10,7 @@
     <link rel="canonical" href="#/watch/nowhere/108">
   
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" href="img/favicon/favicon.png">
     
 
      <!-- manifest -->
