--- a/film/nowhere.html
+++ b/film/nowhere.html
@@ -9,13 +9,8 @@
   <meta name="description" content="Crimson | Regarder Nowhere en streaming gratuitement et sans publicité ni inscription avec Crimson ! Profitez de votre film Nowhere comme au cinéma grâce à Crimson !" />
   <link rel="canonical" href="nowhere.html">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="../img/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="../img/favicon/android-chrome-512x512.png">
-    <link rel="manifest" href="../img/favicon/site.webmanifest">
+  <!-- Favicon -->
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
 
      <!-- manifest -->
      <meta name="apple-mobile-web-app-capable" content="yes">
