--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="img/logo.png">
-    <link rel="image_src" href="img/logo.png">
+    <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/logo.png">
+    <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/logo.png">
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
 	
