--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
 	<meta property="og:title" content="Crimson - LE site de streaming" />
     <meta property="og:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
-    <meta property="og:image" content="img/logo.png" />
+    <meta property="og:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
     <meta property="og:url" content="https://crimson-streaming.github.io/crimson/" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/logo.png">
-    <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/logo.png">
+    <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
+    <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
 	
