--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <meta property="og:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
     <meta property="og:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
     <meta property="og:url" content="https://crimson-streaming.github.io/crimson/" />
-    <meta property="og:image:width" content="1024" />
-    <meta property="og:image:height" content="1024" />
+	<meta property="og:site_name" content="Crimson">
+	<meta property="twitter:title" content="Crimson - LE site de streaming" />
+	<meta property="twitter:url" content="https://crimson-streaming.github.io/crimson/" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
     <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
