Mise à jour des fichiers et de la structure

--- a/film/Deadpool-et-Wolverine.html
+++ b/film/Deadpool-et-Wolverine.html
@@ -10,11 +10,7 @@
   <link rel="canonical" href="Deadpool-et-Wolverine.html">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="../img/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="../img/favicon/android-chrome-512x512.png">
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
     
 
      <!-- manifest -->
@@ -76,7 +72,7 @@
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
                     <li><a href="" class="" title="home">Home</a></li>
-                    <li><a href="#" class="Active" title="Films">Films</a></li>
+                    <li><a href="../films.html" class="Active" title="Films">Films</a></li>
                     <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
