--- a/direct.html
+++ b/direct.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Crimson">
-    <title> direct | Crimson LE site de streaming</title>
+    <title> Direct | Crimson LE site de streaming</title>
     <meta name="description" content="Crimson | Regarder Nowhere en streaming gratuitement et sans publicité ni inscription avec Crimson ! Profitez de votre film Nowhere comme au cinéma grâce à Crimson !" />
     <link rel="canonical" href="#/watch/nowhere/108">
   
@@ -70,7 +70,7 @@
                                     <div id="menu" class="collapse header-menu">
                                         <ul class="nav vfx-item-nav">
                                             <li><a href="index.html" class="" title="home">Home</a></li>
-                                            <li><a href="#" class="" title="Films">Films</a></li>
+                                            <li><a href="films.html" class="" title="Films">Films</a></li>
                                             <li style="border-bottom: 0px solid !important;"><a href="direct.html" class=" active" title="En direct">En direct</a>
                                                 <ul class="dm-align-2 mega-list"></ul>
                                             </li>
