--- a/film/alibi.com-2.html
+++ b/film/alibi.com-2.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="../css/splide.min.css">
   <link rel="stylesheet" href="../css/player-crimson.css">
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
-  <link rel="stylesheet" href="../css/search.css">*
+  <link rel="stylesheet" href="../css/search.css">
 
     <!-- SW -->
     <script src="https://storage.googleapis.com/workbox-cdn/releases/6.5.3/workbox-sw.js"></script>
@@ -71,7 +71,7 @@
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
                     <li><a href="../index.html" class="" title="home">Home</a></li>
-                    <li><a href="#" class="Active" title="Films">Films</a></li>
+                    <li><a href="../films.html" class="Active" title="Films">Films</a></li>
                     <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
