--- a/film/vice-versa-2.html
+++ b/film/vice-versa-2.html
@@ -72,7 +72,7 @@
                 <div id="menu" class="collapse header-menu">
                   <ul class="nav vfx-item-nav">
                     <li><a href="" class="" title="home">Home</a></li>
-                    <li><a href="#" class="Active" title="Films">Films</a></li>
+                    <li><a href="../films.html" class="Active" title="Films">Films</a></li>
                     <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                     <ul class="dm-align-2 mega-list">
                   </ul>
