ajouts de films et corections de bugs

--- a/film/american-nightmare-5-sans-limites.html
+++ b/film/american-nightmare-5-sans-limites.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder American Nightmare 5 Sans Limites en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="american-nightmare-5-sans-limites.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -137,7 +137,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/American-Nightmare-5-Sans-Limites/American-Nightmare-5-Sans-Limites-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/American-Nightmare-5-Sans-Limites/American-Nightmare-5-Sans-Limites-slider.jpg>
           <source src="https://mayi22140.mayicloud.com/files/aa/YG7vf8mAz7Kf0z7OboEFwrz9mlnHRmHQ3Om.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
