--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 				<div class="splide__track">
 					<ul class="splide__list">
 						<li class="splide__slide">
+							<a href="film/le-comte-de-montecristo.html" title="">
+								<div class="splide-slider-details-area" style="margin-bottom: -15px;">
+									<h1></h1>
+									<a href="film/le-comte-de-montecristo.html" class="btn-watch" title=""><img src="img/assets/ic-play.webp" alt="ic-play" title="ic-play">Regarder</a>
+								</div> <img src="img/film/le-comte-de-montecristo/le-comte-de-montecristo-slider.jpg" title="" alt=""> </a>
+						</li>
+						<li class="splide__slide">
 							<a href="film/Deadpool-et-Wolverine.html" title="">
 								<div class="splide-slider-details-area" style="margin-bottom: -15px;">
 									<h1></h1>
@@ -174,6 +181,11 @@
 							<div class="video-img"> <span class="video-item-content">Beetlejuice Beetlejuice</span> <img src="img/film/Beetlejuice-Beetlejuice/Beetlejuice-Beetlejuice-affiche.webp" alt="Beetlejuice Beetlejuice" title="Movies-Beetlejuice Beetlejuice"> </div>
 						</a>
 					</div>
+						<div class="single-video">
+							<a href="film/le-comte-de-montecristo.html" title="Le Comte de Monte-Cristo">
+								<div class="video-img"> <span class="video-item-content">Le Comte de Monte-Cristo</span> <img src="img/film/le-comte-de-montecristo/le-comte-de-montecristo-affiche.jpg" alt="Le Comte de Monte-Cristo" title="Movies-Le Comte de Monte-Cristo"> </div>
+							</a>
+						</div>
 					<div class="single-video">
 						<a href="film/Deadpool-et-Wolverine.html" title="Deadpool &amp; Wolverine">
 							<div class="video-img"> <span class="video-item-content">Deadpool &amp; Wolverine</span> <img src="img/film/deadpool-et-wolverine/deadpool-et-wolverine-affiche.webp" alt="Deadpool &amp; Wolverine" title="Movies-Deadpool &amp; Wolverine"> </div>
