--- a/direct/test.html
+++ b/direct/test.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder 30 jours max en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="30-jours-max.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -137,7 +137,7 @@
       </div>
       <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/30-jours-max/30-jours-max-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/30-jours-max/30-jours-max-slider.jpg>
           <source src="https://hippopotame.site/The.Platform.2.2024.mp4?stream" type="video/mp4">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
