--- a/direct/xilam.html
+++ b/direct/xilam.html
@@ -10,7 +10,7 @@
     
   
   <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
 
      <!-- manifest -->
      <meta name="apple-mobile-web-app-capable" content="yes">
@@ -144,7 +144,7 @@
                 <!-- Video Player Section -->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
                     <!-- Player -->
-                    <video id="player" playsinline controls preload="metadata" poster="../img/direct/xilam-banner.jpg">
+                    <video id="player" playsinline controls preload="auto" poster="../img/direct/xilam-banner.jpg">
                         <source id="video-source" src="https://xilam-animation-1-fr.samsung.wurl.tv/playlist.m3u8 " type="application/x-mpegURL">
                         <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
                         Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
