--- a/film/Deadpool-et-Wolverine.html
+++ b/film/Deadpool-et-Wolverine.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="Deadpool-et-Wolverine.html">
 
     <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
     
 
      <!-- manifest -->
@@ -144,7 +144,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <!-- Player -->
-        <video id="player" playsinline controls preload="metadata" poster="../img/film/deadpool-et-wolverine/deadpoll-et-wolverine-slider.webp">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/deadpool-et-wolverine/deadpoll-et-wolverine-slider.webp">
           <source id="video-source" src="https://share22147.sharecloudy.com/files/aa/KMX0mhT4APYluv9meGyFfLt4RJDoESToERo.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
 
