--- a/film/Un-p'tit-truc-en-plus.html
+++ b/film/Un-p'tit-truc-en-plus.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="Un-p'tit-truc-en-plus.html">
 
   <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
 
      <!-- manifest -->
      <meta name="apple-mobile-web-app-capable" content="yes">
@@ -142,7 +142,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <!-- Player -->
-        <video id="player" playsinline controls preload="metadata" poster="../img/film/un-petit-truc-en-plus/un-petit-truc-en-plus-slider.webp">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/un-petit-truc-en-plus/un-petit-truc-en-plus-slider.webp">
           <source id="video-source" src="https://mayi22140.mayicloud.com/files/aa/kYo4hQwhOQOF7UvF8LSDcJb6xP3wVBKfA8k.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
 
