--- a/film/alibi.com-2.html
+++ b/film/alibi.com-2.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Alibi.com 2 en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="alibi.com-2.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Alibi.com-2/Alibi.com-2-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Alibi.com-2/Alibi.com-2-slider.jpg>
           <source src="https://raw.githubusercontent.com/Crimson-streaming/alibi.com-2/refs/heads/main/alibi.com.-2.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
