--- a/film/back-to-black.html
+++ b/film/back-to-black.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Back to Black en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="back-to-black.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster="../img/film/Back-to-Black/Back-to-Black-slider.jpg">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/Back-to-Black/Back-to-Black-slider.jpg">
           <source src="https://mayi24312.mayicloud.com/files/aa/h2apbo9Dx8d3qxSM9jTk79zYaxZ0WGYdI8C.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
