--- a/film/beetlejuice-beetlejuice.html
+++ b/film/beetlejuice-beetlejuice.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Barbare en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="beetlejuice-beetlejuice.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Beetlejuice-Beetlejuice/Beetlejuice-Beetlejuice-slider.webp>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Beetlejuice-Beetlejuice/Beetlejuice-Beetlejuice-slider.webp>
           <source src="https://raw.githubusercontent.com/Crimson-streaming/Beetlejuice-Beetlejuice/refs/heads/main/beetlejuicie.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
