--- a/film/furiosa-une-saga-mad-max.html
+++ b/film/furiosa-une-saga-mad-max.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Furiosa Une saga Mad Max en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="furiosa-une-saga-mad-max.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -137,7 +137,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Furiosa-Une-saga-Mad-Max/Furiosa-Une-saga-Mad-Max-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Furiosa-Une-saga-Mad-Max/Furiosa-Une-saga-Mad-Max-slider.jpg>
           <source src="https://share22147.sharecloudy.com/files/aa/O567SioCld3aHHr3gXrBjWLfdfdggfdd.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
