--- a/film/godzilla-x-kong-le-nouvel-empire.html
+++ b/film/godzilla-x-kong-le-nouvel-empire.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Godzilla x Kong Le Nouvel Empire en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="godzilla-x-kong-le-nouvel-empire.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Godzilla-x-Kong-Le-Nouvel-Empire/Godzilla-x-Kong-Le-Nouvel-Empire-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Godzilla-x-Kong-Le-Nouvel-Empire/Godzilla-x-Kong-Le-Nouvel-Empire-slider.jpg>
           <source src="https://mayi24312.mayicloud.com/files/aa/NEoTN3IbgmBHvlZ9QGbcC5T92B8GaEJXi7R.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
