--- a/film/insidious-the-red-door.html
+++ b/film/insidious-the-red-door.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Insidious The Red Door en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="insidious-the-red-door.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Insidious-The-Red-Door/Insidious-The-Red-Door-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Insidious-The-Red-Door/Insidious-The-Red-Door-slider.jpg>
           <source src="https://mayi24312.mayicloud.com/files/aa/byZ8NuwqBuHeq1vIO36gndEUJEnJPbQ0JP9.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
