--- a/film/joker.html
+++ b/film/joker.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Joker en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="joker.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Joker/Joker-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Joker/Joker-slider.jpg>
           <source src="https://bs4gs35t6lrm.tnmr.org/hls2/02/00426/mbsin9xx0vef_h/master.m3u8?t=pDzMfRA-BmLzW-EYEvmG56rGx3Dy-evfj5aRWkTLzsg&s=1729980919&e=43200&f=2132561&i=0.3&sp=0" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
