--- a/film/la-nonne-la-malédiction-de-sainte-lucie.html
+++ b/film/la-nonne-la-malédiction-de-sainte-lucie.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder La Nonne La Malédiction de Sainte-Lucie en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="la-nonne-la-malédiction-de-sainte-lucie.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/La-Nonne-La-Malédiction-de-Sainte-Lucie/La-Nonne-La-Malédiction-de-Sainte-Lucie-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/La-Nonne-La-Malédiction-de-Sainte-Lucie/La-Nonne-La-Malédiction-de-Sainte-Lucie-slider.jpg>
           <source src="https://mayi24312.mayicloud.com/files/aa/mh3pTBhpGf6iw5561KeSdiQNFsuqb2kxknW.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
