--- a/film/le-cercle-des-neiges.html
+++ b/film/le-cercle-des-neiges.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Le Cercle des neiges en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="le-cercle-des-neiges.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -137,7 +137,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster="../img/film/Le-Cercle-des-neiges/Le-Cercle-des-neiges-slider.jpg">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/Le-Cercle-des-neiges/Le-Cercle-des-neiges-slider.jpg">
           <source src="https://raw.githubusercontent.com/Crimson-streaming/Le-Cercle-des-neiges/refs/heads/main/le-cercle-des-neiges.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
