--- a/film/moi-moche-et-méchant-4.html
+++ b/film/moi-moche-et-méchant-4.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Moi moche et méchant 4 en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="moi-moche-et-méchant-4.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster="../img/film/moi-moche-et-mechant-4/Moi-moche-et-méchant-4-slider.jpg">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/moi-moche-et-mechant-4/Moi-moche-et-méchant-4-slider.jpg">
           <source src="https://raw.githubusercontent.com/Crimson-streaming/moi-moche-et-m-chant-4/refs/heads/main/moi-moche.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
