--- a/film/nowhere.html
+++ b/film/nowhere.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="nowhere.html">
 
   <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
 
      <!-- manifest -->
      <meta name="apple-mobile-web-app-capable" content="yes">
@@ -143,7 +143,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <!-- Player -->
-        <video id="player" playsinline controls preload="metadata" poster="../img/film/Nowhere/Nowhere-slider.jpg">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/Nowhere/Nowhere-slider.jpg">
           <source id="video-source" src="https://mayi22140.mayicloud.com/files/aa/bU4cGZhssurEmByhmkSHnXVytre4pqbAkgM.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
 
