--- a/film/terrifier-2.html
+++ b/film/terrifier-2.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Crimson | Regarder Terrifier 2 en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="terrifier-2.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
 
      <!-- manifest -->
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="metadata" poster=../img/film/Terrifier-2/Terrifier-2-slider.jpg>
+        <video id="player" playsinline controls preload="auto" poster=../img/film/Terrifier-2/Terrifier-2-slider.jpg>
           <source src="https://mayi24313.mayicloud.com/files/aa/8nbVw4Hdvwrph4kJI38ahzREq6pRcNNlaYg.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
