--- a/film/vice-versa-2.html
+++ b/film/vice-versa-2.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="vice-versa-2.html">
 
   <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
 
      <!-- manifest -->
      <meta name="apple-mobile-web-app-capable" content="yes">
@@ -145,7 +145,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
 
 <!-- Player -->
-<video id="player" playsinline controls preload="metadata" poster="../img/film/vice-versa-2/vice-versa-2-slider.jpg">
+<video id="player" playsinline controls preload="auto" poster="../img/film/vice-versa-2/vice-versa-2-slider.jpg">
   <source id="video-source" src="https://raw.githubusercontent.com/Crimson-streaming/vice-versa-2/refs/heads/main/vice-versa-2.m3u8" type="application/x-mpegURL">
   Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
 </video>
