--- a/film/le-comte-de-montecristo.html
+++ b/film/le-comte-de-montecristo.html
@@ -154,7 +154,7 @@
   
           <script type="text/javascript">
           document.addEventListener('DOMContentLoaded', () => {
-              const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'pip', 'settings', 'fullscreen'];
+              const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'volume', 'captions', 'pip', 'airplay', 'settings', 'fullscreen', 'cast'];
               const player = new Plyr('#player', {
                   controls: playerControls,
                   quality: {
