--- a/film/vice-versa-2.html
+++ b/film/vice-versa-2.html
@@ -168,7 +168,7 @@
 
 <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', () => {
-      const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'pip', 'settings', 'fullscreen'];
+      const playerControls = ['play-large', 'play', 'progress', 'current-time', 'mute', 'volume', 'captions', 'pip', 'airplay', 'settings', 'fullscreen', 'cast'];
       const player = new Plyr('#player', {
           controls: playerControls,
           quality: {
@@ -180,21 +180,41 @@
           fullscreen: { enabled: true, fallback: true, iosNative: true },
           disableContextMenu: true,
           i18n: {
-              play: 'Play',
-              pause: 'Pause',
-              mute: 'Silence',
-              unmute: 'Son activé',
-              enableCaptions: 'Activer les sous-titres',
-              disableCaptions: 'Désactiver les sous-titres',
-              enterFullscreen: 'Plein écran',
-              exitFullscreen: 'Sortir du plein écran',
-              settings: 'Réglages',
-              speed: 'Vitesse',
-              quality: 'Qualité',
-              loop: 'Boucle',
-              disabled: 'Désactivé',
-              enabled: 'Activé',
-              captions: 'Sous-titres',
+                restart: 'Recommencer',
+            rewind: 'Revenir de {seektime}s',
+            play: 'Play',
+            pause: 'Pause',
+            fastForward: 'Passer {seektime}s',
+            seek: 'Rechercher',
+            seekLabel: '{currentTime} de {duration}',
+            played: 'Lancé',
+            buffered: 'Buffered',
+            currentTime: 'Temps actuel',
+            duration: 'Durée',
+            volume: 'Volume',
+            mute: 'Silence',
+            unmute: 'Son activé',
+            enableCaptions: 'Activer les sous-titres',
+            disableCaptions: 'Désactiver les sous-titres',
+            download: 'Télécharger',
+            enterFullscreen: 'Plein écran',
+            exitFullscreen: 'Sortir du plein écran',
+            frameTitle: 'Lecteur pour {title}',
+            captions: 'Sous-titres',
+            settings: 'Réglages',
+            pip: 'Picture-In-Picture',
+            menuBack: 'Retour au menu précédent',
+            speed: 'Vitesse',
+            normal: 'Normal',
+            quality: 'Qualité',
+            loop: 'Boucle',
+            start: 'Début',
+            end: 'Fin',
+            all: 'Tous',
+            reset: 'Réinitialiser',
+            disabled: 'Désactivé',
+            enabled: 'Activé',
+            advertisement: 'Publicité',
           },
       });
 
