--- a/direct/bob-l'éponge.html
+++ b/direct/bob-l'éponge.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../css/splide.min.css">
     <link rel="stylesheet" href="../css/player-crimson.css">
     <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
+    <link rel="stylesheet" href="../css/search.css">
 
     <!-- Player -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
