--- a/films.html
+++ b/films.html
@@ -27,7 +27,6 @@
      <meta name="apple-mobile-web-app-title" content="Crimson">
      <link rel="manifest" href="pwa/manifest.json">
 	
-    <!-- LOAD LOCAL CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/megamenu.css">
 	<link rel="stylesheet" href="css/style-three.css" id="theme">
@@ -38,6 +37,7 @@
 	<link rel="stylesheet" href="css/player-crimson.css">
 	<link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/validatesecurity.css">
     <link rel="stylesheet" href="css/search.css">
 
      <!-- SW -->
