--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<link rel="stylesheet" href="css/player-crimson.css">
 	<link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/validatesecurity.css">
     <link rel="stylesheet" href="css/search.css">
 
      <!-- SW -->
