--- a/direct.html
+++ b/direct.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
                     <div class="single-video">
-                        <a href="direct/South-park.html" title="South Park">
+                        <a href="direct/south-park.html" title="South Park">
                             <div class="video-img">          
                                 <img src="img/direct/South-Park.png" title="South Park" alt="South Park">         
                             </div>
