--- a/direct/Dora-L'exploratrice.html
+++ b/direct/Dora-L'exploratrice.html
@@ -144,7 +144,7 @@
                 <!-- Video Player Section -->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
                     <!-- Player -->
-                    <video id="player" playsinline controls preload="metadata" poster="../img/direct/Dora-L'exploratrice.banner.jpg">
+                    <video id="player" playsinline controls preload="auto" poster="../img/direct/Dora-L'exploratrice.banner.jpg">
                         <source id="video-source" src="https://xilam-animation-1-fr.samsung.wurl.tv/playlist.m3u8 " type="application/x-mpegURL">
                         <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
                         Votre navigateur ne prend pas en charge la balise vidéo.
