--- a/direct/Pluto-Tv-Series.html
+++ b/direct/Pluto-Tv-Series.html
@@ -144,7 +144,7 @@
                 <!-- Video Player Section -->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
                     <!-- Player -->
-                    <video id="player" playsinline controls preload="metadata" poster="../img/direct/Pluto-Tv-Series-banner.jpg">
+                    <video id="player" playsinline controls preload="auto" poster="../img/direct/Pluto-Tv-Series-banner.jpg">
                         <source id="video-source" src="http://cfd-v4-service-channel-stitcher-use1-1.prd.pluto.tv/stitch/hls/channel/5f8ed2d1c34c2300073bf02c/master.m3u8?appName=web&appVersion=unknown&clientTime=0&deviceDNT=0&deviceId=8e055172-1f2c-11ef-86d8-5d587df108c6&deviceMake=Chrome&deviceModel=web&deviceType=web&deviceVersion=unknown&includeExtendedEvents=false&serverSideAds=false&sid=4bf0c406-dfcb-4037-8de6-bd12c393c6a5" type="application/x-mpegURL">
                         <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
                         Votre navigateur ne prend pas en charge la balise vidéo.
