--- a/direct/bob-l'éponge.html
+++ b/direct/bob-l'éponge.html
@@ -142,7 +142,7 @@
                 <!-- Video Player Section -->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
                     <!-- Player -->
-                    <video id="player" playsinline controls preload="metadata" poster="../img/direct/bob-l'eponge-slider.webp">
+                    <video id="player" playsinline controls preload="auto" poster="../img/direct/bob-l'eponge-slider.webp">
                         <source id="video-source" src="http://cfd-v4-service-channel-stitcher-use1-1.prd.pluto.tv/stitch/hls/channel/5ffc8c345822750007e167de/master.m3u8?appName=web&appVersion=unknown&clientTime=0&deviceDNT=0&deviceId=8e059f93-1f2c-11ef-86d8-5d587df108c6&deviceMake=Chrome&deviceModel=web&deviceType=web&deviceVersion=unknown&includeExtendedEvents=false&serverSideAds=false&sid=eb72cd85-f8e2-414a-99d0-c0cd8a98518d" type="application/x-mpegURL">
                         <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
                         Votre navigateur ne prend pas en charge la balise vidéo.
