--- a/direct/Dora-L'exploratrice.html
+++ b/direct/Dora-L'exploratrice.html
@@ -135,7 +135,7 @@
                     </nav>
                     <section class="tabs_item_block">
                         <div class="tab1">
-                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible dans l’écosystème Apple. ⚠]</strong></p>
+                                                        <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
                             <p>La série est centrée sur Dora Marquez, une jeune Latina de sept ans, qui adore se lancer dans des quêtes, accompagnée de son sac à dos violet parlant et de son compagnon singe Babouche.</p>
                         </div>
                     </section>
