--- a/direct/Pluto-Tv-Series.html
+++ b/direct/Pluto-Tv-Series.html
@@ -135,7 +135,7 @@
                     </nav>
                     <section class="tabs_item_block">
                         <div class="tab1">
-                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible dans l’écosystème Apple. ⚠]</strong></p>
+                                                        <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
                             <p>Pluto TV Series propose un large éventail de séries télévisées, allant des classiques emblématiques aux émissions contemporaines.</p>
                         </div>
                     </section>
