--- a/direct/bob-l'éponge.html
+++ b/direct/bob-l'éponge.html
@@ -133,7 +133,7 @@
                     </nav>
                     <section class="tabs_item_block">
                         <div class="tab1">
-                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible dans l’écosystème Apple. ⚠]</strong></p>
+                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
                             <p>Après un événement tragique, une jeune femme enceinte se retrouve piégée dans un conteneur maritime au large des côtes. Elle doit survivre tout en affrontant ses peurs et ses démons, espérant que quelqu'un viendra à son secours.</p>
                         </div>
                     </section>
