--- a/direct/pluto-tv-films.html
+++ b/direct/pluto-tv-films.html
@@ -135,7 +135,7 @@
                     </nav>
                     <section class="tabs_item_block">
                         <div class="tab1">
-                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible dans l’écosystème Apple. ⚠]</strong></p>
+                                                        <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
                             <p>Pluto TV Films offre une vaste sélection de films, allant des classiques aux nouveautés, disponibles en streaming gratuit, permettant aux utilisateurs de profiter d'une expérience cinématographique variée.</p>
                         </div>
                     </section>
