--- a/direct/tortue-ninja.html
+++ b/direct/tortue-ninja.html
@@ -135,7 +135,7 @@
                     </nav>
                     <section class="tabs_item_block">
                         <div class="tab1">
-                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible dans l’écosystème Apple. ⚠]</strong></p>
+                                                        <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
                             <p>Après avoir été exposées à du mutagène extraterrestre, quatre jeunes tortues, Leonardo, Raphael, Donatello et Michelangelo, sont adoptées par un humain , mutant lui aussi, transformé en rat et surnommé Splinter. Ce dernier les élève comme ses propres enfants et leur enseigne les arts martiaux.</p>
                         </div>
                     </section>
