--- a/direct/pluto-tv-kids.html
+++ b/direct/pluto-tv-kids.html
@@ -135,7 +135,7 @@
                     </nav>
                     <section class="tabs_item_block">
                         <div class="tab1">
-                            <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible dans l’écosystème Apple. ⚠]</strong></p>
+                                                        <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
                             <p>Pluto TV Kids offre une sélection divertissante de contenus adaptés aux enfants, incluant des dessins animés, des émissions éducatives et des films.</p>
                         </div>
                     </section>
