ajouts de films

--- a/direct/bob-l'éponge.html
+++ b/direct/bob-l'éponge.html
@@ -134,7 +134,7 @@
                     <section class="tabs_item_block">
                         <div class="tab1">
                             <p><strong id="warning-video-cam-sd">[⚠️ Ce programme n'est pas disponible sur certains appareils. ⚠]</strong></p>
-                            <p>Après un événement tragique, une jeune femme enceinte se retrouve piégée dans un conteneur maritime au large des côtes. Elle doit survivre tout en affrontant ses peurs et ses démons, espérant que quelqu'un viendra à son secours.</p>
+                            <p>La série met en scène les aventures loufoques de Bob, une éponge qui vit dans un ananas au fond de la mer dans la ville de Bikini Bottom peuplée principalement de poissons. Bob travaille comme cuisinier au Crabe croustillant, un restaurant dirigé par un crabe, le Capitaine Krabs, et dont la spécialité est un hamburger appelé le "pâté de crabe". Le meilleur ami de Bob est Patrick, une étoile de mer encore plus stupide et immature que Bob. Carlo (qui joue de la clarinette) est un calamar qui est le collègue de travail et le voisin grincheux de Bob, fatigué de devoir supporter ses excentricités. Enfin l'autre ami de Bob, Sandy, est une écureuil qui a décidé de vivre dans la mer.</p>
                         </div>
                     </section>
                 </div>
