--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
 				<div class="splide__track">
 					<ul class="splide__list">
 						<li class="splide__slide">
+							<a href="film/joker-folie-à-deux.html" title="">
+								<div class="splide-slider-details-area" style="margin-bottom: -15px;">
+									<h1></h1>
+									<a href="film/joker-folie-à-deux.html" class="btn-watch" title=""><img src="img/assets/ic-play.webp" alt="ic-play" title="ic-play">Regarder</a>
+								</div> <img src="img/film/joker-folie-à-deux/joker-folie-à-deux-slider-owl.webp" title="" alt=""> </a>
+						</li>
+						<li class="splide__slide">
 							<a href="film/le-comte-de-montecristo.html" title="">
 								<div class="splide-slider-details-area" style="margin-bottom: -15px;">
 									<h1></h1>
@@ -178,6 +185,11 @@
             </span> </div>
 				<div class="video-carousel owl-carousel">
 					<div class="single-video">
+						<a href="film/joker-folie-à-deux.html" title="Joker : Folie à deux">
+							<div class="video-img"> <span class="video-item-content">Joker : Folie à deux</span> <img src="img/film/joker-folie-à-deux/joker-folie-à-deux-affiche.jpg" alt="Joker : Folie à deux" title="Movies-Joker : Folie à deux"> </div>
+						</a>
+					</div>
+					<div class="single-video">
 						<a href="film/beetlejuice-beetlejuice.html" title="Beetlejuice Beetlejuicee">
 							<div class="video-img"> <span class="video-item-content">Beetlejuice Beetlejuice</span> <img src="img/film/Beetlejuice-Beetlejuice/Beetlejuice-Beetlejuice-affiche.webp" alt="Beetlejuice Beetlejuice" title="Movies-Beetlejuice Beetlejuice"> </div>
 						</a>
@@ -190,11 +202,6 @@
 					<div class="single-video">
 						<a href="film/Deadpool-et-Wolverine.html" title="Deadpool &amp; Wolverine">
 							<div class="video-img"> <span class="video-item-content">Deadpool &amp; Wolverine</span> <img src="img/film/deadpool-et-wolverine/deadpool-et-wolverine-affiche.webp" alt="Deadpool &amp; Wolverine" title="Movies-Deadpool &amp; Wolverine"> </div>
-						</a>
-					</div>
-					<div class="single-video">
-						<a href="film/Un-p'tit-truc-en-plus.html" title="Un p\&#039;tit truc en plus">
-							<div class="video-img"> <span class="video-item-content">Un p&#039;tit truc en plus</span> <img src="img/film/un-petit-truc-en-plus/un-petit-truc-en-plus-affiche.webp" alt="Un p\&#039;tit truc en plus" title="Movies-Un p\&#039;tit truc en plus"> </div>
 						</a>
 					</div>
 					<div class="single-video">
