--- a/film/joker-folie-à-deux.html
+++ b/film/joker-folie-à-deux.html
@@ -5,9 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Crimson">
-  <title>Crimson | Regarder Joker en streaming</title>
-  <meta name="description" content="Crimson | Regarder Joker en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
-  <link rel="canonical" href="joker.html">
+  <title>Crimson | Regarder Joker : Folie à deux en streaming</title>
+  <meta name="description" content="Crimson | RegarderJoker : Folie à deux en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
+  <link rel="canonical" href="joker-folie-à-deux.html">
 <!-- Favicon -->
 	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
@@ -104,18 +104,21 @@
           <div class="row mt-30">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="video-posts-data mt-0 mb-0">
-                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/Joker/Joker-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
+                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/joker-folie-à-deux/joker-folie-à-deux-slider.webp); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
                   <div class="d-flex dtl-title-block mb-2">  
-                    <h1 class="mb-0" style="font-weight: bold;">Joker</h1>
+                    <h1 class="mb-0" style="font-weight: bold;">Joker : Folie à deux</h1>
                   </div>
                   <ul class="actor-video-link">
-                    <li><a title="Drame">Drame</a></li> <li><a title="Horreur">Horreur</a></li> <li><a title="Thriller">Thriller</a></li> <li><a title="Français">Français</a></li>
+                    <li><a title="Crime">Crime</a></li> 
+                    <li><a title="Drame">Drame</a></li> 
+                    <li><a title="Thriller">Thriller</a></li> 
+                    <li><a title="Français">Français</a></li>
                   </ul>
                   <div class="video-post-date">
-                    <span class="video-posts-author"><i class="fa fa-eye"></i>28.7K Vues</span>
-                    <span class="video-posts-author"><i class="fa fa-calendar-alt"></i>09/10/2019</span>
-                    <span class="video-posts-author"><i class="fa fa-clock"></i>2h 02m</span>
-                    <span class="video-imdb-view">8.2/10 ⭐</span>
+                    <span class="video-posts-author"><i class="fa fa-eye"></i>13.2K Vues</span>
+                    <span class="video-posts-author"><i class="fa fa-calendar-alt"></i>01/10/2024</span>
+                    <span class="video-posts-author"><i class="fa fa-clock"></i>2h 18m</span>
+                    <span class="video-imdb-view">5.8/10 ⭐</span>
                   </div>
                 </div>
               </div>
@@ -129,7 +132,7 @@
               </nav>
               <section class="tabs_item_block">
                 <div class="tab1">
-                  <p>Dans les années 1980, à Gotham City, Arthur Fleck, un humoriste de stand‐up raté, bascule dans la folie et devient le Joker.</p>
+                  <p>Arthur Fleck, alors interné dans l'asile d'Arkham, attend d'être jugé pour les crimes qu'il a commis sous les traits de Joker. Déchiré entre ses deux identités, Arthur ne trouve pas seulement le grand amour, mais aussi la mélodie qui a toujours sommeillé en lui.</p>
                 </div>
               </section>
             </div>
@@ -137,8 +140,8 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="auto" poster=../img/film/Joker/Joker-slider.jpg>
-          <source src="https://mayi22148.mayicloud.com/files/aa/VGDxRmlCsfmR9slAQRTFn1hB9p1WfPnaw1I.m3u8" type="application/x-mpegURL">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/joker-folie-à-deux/joker-folie-à-deux-slider.webp">
+          <source src="https://mayi22148.mayicloud.com/files/aa/wCoYkWX2WSSPkJLkj8B7UIlwrDQDUOhqrFp.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
