--- a/film/planet-dune.html
+++ b/film/planet-dune.html
@@ -5,9 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Crimson">
-  <title>Crimson | Regarder Joker en streaming</title>
-  <meta name="description" content="Crimson | Regarder Joker en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
-  <link rel="canonical" href="joker.html">
+  <title>Crimson | Regarder Dune : Première partie en streaming</title>
+  <meta name="description" content="Crimson | Regarder Dune : Première partie en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
+  <link rel="canonical" href="dune-première-partie.html">
 <!-- Favicon -->
 	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
   <link rel="stylesheet" href="../css/search.css">
-   
+ 
    <!-- SW -->
    <script src="https://storage.googleapis.com/workbox-cdn/releases/6.5.3/workbox-sw.js"></script>
 
@@ -104,18 +104,20 @@
           <div class="row mt-30">
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="video-posts-data mt-0 mb-0">
-                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/Joker/Joker-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
+                <div id="poster-watch-movie" class="video-post-info" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)), url(../img/film/planet-dune/planet-dune-slider.jpg); background-repeat: no-repeat; background-size: cover; min-height: 330px; border-radius: 14px;">
                   <div class="d-flex dtl-title-block mb-2">  
-                    <h1 class="mb-0" style="font-weight: bold;">Joker</h1>
+                    <h1 class="mb-0" style="font-weight: bold;">Planet Dune</h1>
                   </div>
                   <ul class="actor-video-link">
-                    <li><a title="Drame">Drame</a></li> <li><a title="Horreur">Horreur</a></li> <li><a title="Thriller">Thriller</a></li> <li><a title="Français">Français</a></li>
+                    <li><a title="Aventure">Aventure</a></li> 
+                    <li><a title="Science-fiction">Science-fiction</a></li> 
+                    <li><a title="Français">Français</a></li>
                   </ul>
                   <div class="video-post-date">
-                    <span class="video-posts-author"><i class="fa fa-eye"></i>28.7K Vues</span>
-                    <span class="video-posts-author"><i class="fa fa-calendar-alt"></i>09/10/2019</span>
-                    <span class="video-posts-author"><i class="fa fa-clock"></i>2h 02m</span>
-                    <span class="video-imdb-view">8.2/10 ⭐</span>
+                    <span class="video-posts-author"><i class="fa fa-eye"></i>30.1K Vues</span>
+                    <span class="video-posts-author"><i class="fa fa-calendar-alt"></i>21/09/2022</span>
+                    <span class="video-posts-author"><i class="fa fa-clock"></i>1h 26m</span>
+                    <span class="video-imdb-view"> 6 /10 ⭐</span>
                   </div>
                 </div>
               </div>
@@ -129,7 +131,8 @@
               </nav>
               <section class="tabs_item_block">
                 <div class="tab1">
-                  <p>Dans les années 1980, à Gotham City, Arthur Fleck, un humoriste de stand‐up raté, bascule dans la folie et devient le Joker.</p>
+                  <p>Un équipage en mission pour sauver une base abandonnée sur une planète désertique devient mortel lorsque l'équipage se retrouve chassé et attaqué par les prédateurs suprêmes de la planète : les vers de sable géants.
+                </p>
                 </div>
               </section>
             </div>
@@ -137,8 +140,8 @@
         </div>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
-        <video id="player" playsinline controls preload="auto" poster=../img/film/Joker/Joker-slider.jpg>
-          <source src="https://mayi22148.mayicloud.com/files/aa/VGDxRmlCsfmR9slAQRTFn1hB9p1WfPnaw1I.m3u8" type="application/x-mpegURL">
+        <video id="player" playsinline controls preload="auto" poster="../img/film/planet-dune/planet-dune-slider.jpg">
+          <source src="https://mayi22140.mayicloud.com/files/aa/QkdwGoyp3IwJE5zV0ryXBG6Yd2O570sXkFu.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
